# reaction-reach

./: .!73293!spec.md  .env.example  .gitignore  AUTHENTICATION_GUIDE.md  BROWSERBASE_CONTEXTS.md  BROWSERBASE_CONTEXT_AUTH_SUCCESS.md  COMPARISON.md  EXA_ENRICHMENT_README.md  LINKEDIN_AUTH_ARCHITECTURE.md  LINKEDIN_OUTREACH_AUTOMATION.md  LINKEDIN_REACTIONS_EXTRACTION_PROCESS.md  LINKEDIN_REACTION_WORKFLOW.md  README-crewai.md  README.md  adam_anzuoni_contact_enrichment_1752373766570.json  adam_anzuoni_contact_extracted_1752374277130.json  adam_anzuoni_enrichment.js  adam_anzuoni_phone_extraction_1752374236096.json  apollo_api_phone_extraction.js  auth_with_2fa.py  claude.md  create_and_login_context.py  create_fresh_context_session.py  create_linkedin_context.py  create_oauth_credentials.py  create_real_gmail_drafts.py  create_session_linkedin_feed.py  crewai_linkedin_extractor.py  crewai_linkedin_simple.py  debug_gmail_mcp.py  demo_email_drafts_1752379202.json  demo_gmail_integration.py  demo_gmail_summary_1752379202.md  exa_enrichment.js  exa_test_results_summary.md  extract_adam_phone_api.js  extract_adamanz_posts.py  extract_phone_from_ui.js  gmail_integration.py  gmail_outreach_summary_1752379518.md  (+63 more)
linkedin-reaction-reach/: .env.example  .gitignore  README.md  gmail_outreach_summary_1752434628.md  pyproject.toml  reactions_summary_1752434601.md  run_crew.py  test_apollo_mcp_integration.py
linkedin-reaction-reach/reaction_reach_v2/: pyproject.toml  run.py
linkedin-reaction-reach/reaction_reach_v2/src/reaction_reach_v2/: __init__.py  crew.py  main.py
linkedin-reaction-reach/src/linkedin_reaction_reach/: __init__.py  crew.py  main.py
linkedin-reaction-reach/src/linkedin_reaction_reach/config/: agents.yaml  tasks.yaml
linkedin-reaction-reach/src/linkedin_reaction_reach/tools/: __init__.py  apollo_tool.py  linkedin_tool.py
linkedin_crew/: CREWAI_INTEGRATION_NOTES.md  README.md  pyproject.toml  test_simple.py
linkedin_crew/src/linkedin_crew/: crew.py  main.py
linkedin_crew/src/linkedin_crew/config/: agents.yaml  tasks.yaml
(+18 files in other folders)
