[tool.poetry]
name = "reaction-reach-v2"
version = "0.1.0"
description = "LinkedIn Reaction Intelligence Gathering with CrewAI"
authors = ["ReactionReach Team"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.141.0"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reaction_reach_v2 = "reaction_reach_v2.main:run"
train = "reaction_reach_v2.main:train"
replay = "reaction_reach_v2.main:replay"
test = "reaction_reach_v2.main:test"